# DMC

./: .gitignore  .gitmodules  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build-android.bat  install-android.bat  pyproject.toml  pytest.ini  run-phone.bat  run.bat  state.md
.gplay/: config.yaml
android/llama.android/: .gitignore  gradle.properties  settings.gradle.kts
android/llama.android/app/: build.gradle.kts  proguard-rules.pro
android/llama.android/app/src/main/: AndroidManifest.xml
android/llama.android/app/src/main/java/com/example/llama/: MainActivity.kt  MessageAdapter.kt
android/llama.android/app/src/main/java/com/inetconnector/dmc/: ConversationStateTracker.kt  MainActivity.kt  (+1 more)
android/llama.android/app/src/main/res/drawable/: dialog_model_row_bg.xml  dialog_model_row_current_bg.xml  dialog_model_surface.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
android/llama.android/app/src/main/res/layout/: activity_main.xml  dialog_model_download.xml  dialog_model_import.xml  dialog_model_manager.xml  dialog_model_row.xml
android/llama.android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/llama.android/app/src/main/res/values-de/: strings.xml
android/llama.android/app/src/main/res/values-es/: strings.xml
android/llama.android/app/src/main/res/values-fr/: strings.xml
android/llama.android/app/src/main/res/values-it/: strings.xml
android/llama.android/app/src/main/res/values-nl/: strings.xml
android/llama.android/app/src/main/res/values-pl/: strings.xml
android/llama.android/app/src/main/res/values-pt-rBR/: strings.xml
android/llama.android/app/src/main/res/values-tr/: strings.xml
android/llama.android/app/src/main/res/xml/: file_paths.xml
android/llama.android/lib/: build.gradle.kts
android/llama.android/lib/src/main/cpp/: CMakeLists.txt  ai_chat.cpp
artifacts/AHSMA_Project_v0.6/: PROJECT_STATUS_v0.3.md  PROJECT_STATUS_v0.4.md  PROJECT_STATUS_v0.5.md  PROJECT_STATUS_v0.6.md  README.md
artifacts/AHSMA_Project_v0.6/ahsa_phase1/: README_PHASE1.txt
artifacts/AHSMA_Project_v0.6/ahsa_phase2/: reference_benchmark.json
artifacts/AHSMA_Project_v0.6/ahsa_phase2/code/: README.md  ahsma_reference.py  benchmark_ahsma.py  pyproject.toml  requirements.txt
artifacts/AHSMA_Project_v0.6/ahsa_phase2/code/tests/: test_ahsma.py
artifacts/AHSMA_Project_v0.6/ahsa_phase3/: reference_benchmark_v0.3.json
artifacts/AHSMA_Project_v0.6/ahsa_phase3/code/: README.md  ahsma_speed.py  benchmark_speed.py  requirements.txt  test_speed.py
artifacts/AHSMA_Project_v0.6/ahsa_phase4/: cpp_reference_benchmark_v0.3.json
artifacts/AHSMA_Project_v0.6/ahsa_phase4/cpp_reference/: CMakeLists.txt  README.md  ahsma_index.hpp  main.cpp  test.cpp
artifacts/AHSMA_Project_v0.6/ahsa_phase5/llama_cpp_integration/: BUILD_CHECK.txt  INTEGRATION_PLAN.md  PATCH_CHECKLIST.md  README.md  UPSTREAM_MANIFEST.json  llama-ahsma.cpp  llama-ahsma.h
artifacts/AHSMA_Project_v0.6/ahsa_phase6/llama_cpp_patchset/: README.md  VALIDATION.txt  apply_to_llama_cpp.sh  remove_from_llama_cpp.sh
artifacts/AHSMA_Project_v0.6/ahsa_phase6/llama_cpp_patchset/patches/: 0001-ahsma-build-and-fused-op.patch  0002-ahsma-context-lifecycle.patch  0003-ahsma-safe-accessor.patch
artifacts/AHSMA_Project_v0.6/ahsa_phase6/llama_cpp_patchset/tests/: test_patch_contract.py
artifacts/AHSMA_Project_v0.6/ahsa_phase7/kv_index_lifecycle/: CMakeLists.txt  README.md  VALIDATION.txt  ahsma_kv_index.hpp  test.cpp
artifacts/AHSMA_Project_v0.6/ahsa_phase8/: README.md
artifacts/AHSMA_Project_v0.6/ahsa_phase8/cpu_selected_attention/: CMakeLists.txt  README.md  ahsma_cpu_attention.hpp  benchmark.cpp  test.cpp
artifacts/AHSMA_Project_v0.6/ahsa_phase8/gpu_llama_contract/: CMakeLists.txt  README.md  ahsma_llama_gpu_contract.cpp  ahsma_llama_gpu_contract.hpp  benchmark.cpp  test.cpp
artifacts/AHSMA_Project_v0.6/ahsa_phase8/gpu_selected_attention/: CMakeLists.txt  README.md  ahsma_gpu_attention.cu  ahsma_gpu_attention.cuh  benchmark.cpp  test.cpp
artifacts/AHSMA_Project_v0.6/ahsa_phase8/kv_cache_bridge/: CMakeLists.txt  README.md  ahsma_kv_bridge.hpp  benchmark.cpp  test.cpp
artifacts/AHSMA_Project_v0.6/ahsa_phase8/llama_cpp_contract/: CMakeLists.txt  README.md  ahsma_llama_contract.cpp  ahsma_llama_contract.hpp  benchmark.cpp  test.cpp
cpp/: CMakeLists.txt  CMakePresets.json  README.md  dmc_reference.hpp  main.cpp  test.cpp
dmc/: __init__.py  core.py
docs/: ARCHITECTURE.md  BENCHMARKS.md  BRAND_AND_PLAY_REVIEW.md  CONTINUE_SETUP.md  DECISIONS.md  GOOGLE_PLAY_DMC.md  GROSSER_KONTEXT.md  INSTANCE.md  LARGE_CONTEXT.md  LLAMA_CPP_LAN.md  LPS.md  OFFLINE_WISSENSMODULE.md  PUBLICATION_READINESS.md  RELEASE_NOTES.md  RESEARCH.md  ROADMAP.md  STATE.md  TARGET_STATE.md  TOOLCHAIN_SETUP.md  VALIDATION.md
play/: DATA_SAFETY.md
play/metadata/de-DE/: full_description.txt  short_description.txt  title.txt
play/metadata/en-US/: full_description.txt  short_description.txt  title.txt
play/metadata/es-ES/: full_description.txt  short_description.txt
play/metadata/fr-FR/: full_description.txt  short_description.txt  title.txt
play/metadata/it-IT/: full_description.txt  short_description.txt  title.txt
play/metadata/nl-NL/: full_description.txt  short_description.txt  title.txt
play/metadata/pl-PL/: full_description.txt  short_description.txt  title.txt
play/metadata/pt-BR/: full_description.txt  short_description.txt  title.txt
play/metadata/tr-TR/: full_description.txt  short_description.txt  title.txt
play/release-notes/: 1.0.0.json  1.0.1.json
play/screenshots/: README.md
privacy/: index.html
scripts/: generate-webui-license-notices.mjs
scripts/knowledge/: build_knowledge_module.py
scripts/windows/: open-llama-lan-8080.ps1  prepare-android-webui.ps1  prepare-dev.ps1  prepare-llama-submodule.ps1  setup-continue.ps1  setup-gplay-dmc.ps1  start-llama-lan.ps1  verify-android-dmc.ps1
tests/: test_dmc.py  test_firewall_script.py  test_knowledge_module_builder.py  test_launcher.py  test_run_bat.py  test_run_phone_bat.py
third_party_licenses/: WEB_UI_NOTICES.txt
(+8 files in other folders)
