[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dmc-reference"
version = "0.1.0"
description = "Deterministic Multiresolution Context reference implementation"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["torch>=2.2"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
packages = ["dmc"]
