[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ahsma-reference"
version = "0.2.1"
description = "Correctness-oriented reference implementation of AHSMA block-sparse attention"
requires-python = ">=3.10"
dependencies = ["torch>=2.2"]

[tool.setuptools]
py-modules = ["ahsma_reference"]
